fix: text align left

--- a/src/app/games/games.component.css
+++ b/src/app/games/games.component.css
@@ -11,6 +11,7 @@
 
 .game-grid > a {
     justify-self: left;
+    text-align: left;
 }
 
 .game-grid > img {
